# scrape-and-dash

./: .envrc  .gitignore  README.md  alembic.ini  app.py  data_processor.py  generators_data_processor.py  git ignore python list.txt  items.py  models.py  pipelines.py  pipelines_debug.py  pyproject.toml  requirements.txt  schema.sql  settings.py  utilities.py  wm_parser.py
alembic/: env.py
dash/: bestselling_viewer_app.py  brand_viewer_app.py  compare_by_brand_app.py  highest_rated_viewer_app.py  products_viewer_app.py
dashboard/: .dockerignore  Dockerfile  app.py  app_runnable-not working.py  index.py  pyproject.toml
dashboard/app/: app.py  index.py
dashboard/app/file_processor/: wm_pipelines.py  wm_processor.py
dashboard/app/pages/: best_selling_viewer.py  brand_viewer.py  compare_by_brand.py  create_user.py  file_upload.py  highest_rated_viewer.py  home.py  login.py  logout.py  prod_search.py  products_viewer.py
dashboard/apps/: best_selling_viewer.py  brand_viewer.py  compare_by_brand.py  create_user.py  file_upload.py  highest_rated_viewer.py  home.py  login.py  logout.py  prod_search.py  products_viewer.py
dashboard/file_processor/: wm_pipelines.py  wm_processor.py
dedupe/: deduplication_example.py
models_items/: models.py
old_files/: nl_product_spider copy.py  pipelines_adapter.py  wm_parser_local.py
resources/: dedupe_test.py  example_shopify_scraper.py  size_variants.txt
scraping/: pipelines.py  scrape.py  settings.py  utilities.py
spiders/: ff_brand_spider.py  ff_category_spider.py  ff_product_spider.py  gm_brand_spider.py  gm_product_spider.py  (+3 more)
(+15 files in other folders)
